--- a/PS01/index.html
+++ b/PS01/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Incorporate Final Project</title>
+    <title>Game of Thrones Houses, Regions, & Characters</title>
 
     <link rel="stylesheet" type="text/css" href="./libraries/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
@@ -18,11 +18,12 @@
 
 <body>
 
-    <input type="range" min="1987" max="2007" value="1" class="slider" id="mySlider" oninput="sliderMoved(value)">
+    <!-- <input type="range" min="1987" max="2007" value="1" class="slider" id="mySlider" oninput="sliderMoved(value)"> -->
 
     <br>
 
-    <svg width="800" height="600"></svg>
+    <svg width="800" height="600" id="svg1"></svg>
+    <svg width="800" height="600" id="svg2"></svg>
 
 </body>
 
